# vibevoice-mac-appliance

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP_REPO.md  pyproject.toml
cli/: deterministic.py  vvctl_diag.py  vvctl_enhanced  vvctl_final
configs/: mac_config.py  requirements.txt
docs/: DAY2_RUNBOOK.md  FINAL_CHECKLIST.md  INCIDENT_TEMPLATE.md  MISSION_COMPLETE.md  PRODUCTION_READY.md  README_MAC.md
scripts/: accept.sh  check_golden.sh  fetch_models.py  sync_hf_cache_from_toddllm.sh
server/: mac_production_server.py  production_server_hardened.py
services/: com.vibevoice.mac.local.plist
synth/: atomic_audio.py  audio_qc.py  enhanced_audio_qc.py  golden_path_validator.py  hardened_synthesis.py
